[gd_scene load_steps=6 format=2]

[ext_resource path="res://src/level_objs/AIs/dumb_ai_player_chaser.gd" type="Script" id=1]
[ext_resource path="res://assets/texture/Retina/character_squareRed.png" type="Texture" id=2]
[ext_resource path="res://addons/godot-next/2d/trail_2d.gd" type="Script" id=3]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 36.9725, 58.7471 )

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 252.997, 183.944 )

[node name="dumb_ai_player_chaser" type="KinematicBody2D"]
script = ExtResource( 1 )
__meta__ = {
"_edit_group_": true
}

[node name="Sprite" type="Sprite" parent="."]
texture = ExtResource( 2 )

[node name="Trail2D" type="Line2D" parent="."]
z_index = -1
points = PoolVector2Array( 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0 )
width = 100.0
default_color = Color( 0.827451, 0.827451, 0.827451, 1 )
texture_mode = 2
antialiased = true
script = ExtResource( 3 )
degen_rate = 50

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="range" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="range"]
shape = SubResource( 2 )

[node name="dir_detector" type="Node2D" parent="."]

[node name="right" type="RayCast2D" parent="dir_detector"]
enabled = true
cast_to = Vector2( 250, 0 )

[node name="left" type="RayCast2D" parent="dir_detector"]
enabled = true
cast_to = Vector2( -250, 0 )
[connection signal="body_entered" from="range" to="." method="_on_range_body_entered"]
[connection signal="body_exited" from="range" to="." method="_on_range_body_exited"]
